welcome.lessons.welcome.loopdowhile.Poucet2.scala.code
var biscuits:Int = 0

while (!sortieTrouvee()) {
  do {
    avance()
    if (estSurBiscuit()) {
      biscuits = biscuits + 1
    }
  }
  if (biscuits >= 3) {
    gauche()
  } else {
    droite()
  } while (!crossing())
  biscuits = 0
}
avance()